--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<link rel = "stylesheet" href = "btn.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
+    <link rel="stylesheet" href = "style.css">
 <body>
-<h1 id = "h_1">HEADING 1</h1>
-<div class = "d1">
-<img class = "img_1" src = "yahoo.jpg"><br>
-<button class = "btn">Submit</button>
+    <h1 id = 'H1'>
+        Intersteller World
+    </h1>
+<div>
+    <img class = 'img' src="intersteller.png"> <br>
+    <button class = 'btn'>
+        Start    
+    </button>
 </div>
 </body>
 </html>
